[project]
name = "LSP-copilot"
version = "0.0.0"
description = "GitHub Copilot support for Sublime Text LSP plugin provided through Copilot.vim."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "Jinja2==3.*",
  "jmespath>=1,<2",
  "more-itertools>=10,<11",
  "requests>=2,<3",
  "typing-extensions>=4.12",
  "watchdog>=4,<5",
  "wcmatch>=8,<9",
]

[dependency-groups]
dev = [
  "mypy>=1.14",
  "ruff>=0.13",
  "types-jmespath",
  "types-requests",
]

[tool.uv]
default-groups = ["dev"]

[tool.mypy]
# ignore_missing_imports = False
check_untyped_defs = true
strict_optional = true
mypy_path = 'typings/lsp_utils/st3:typings/ST-API-stubs/typings:typings/sublime-markdown-popups/st3:typings:stubs'
python_version = '3.8'

[[tool.mypy.overrides]]
module = [
    "LSP.*",
    "lsp_utils.*",
    "mdpopups.*",
    "sublime_lib.*",
    "typings.*",
]
ignore_errors = true
ignore_missing_imports = true

[tool.pyright]
include = ['./']
exclude = [
  '**/__pycache__/',
  '**/node_modules/',
  # git-related
  '**/.git/',
  '**/br-*/',
  '**/branch-*/',
]
ignore = [
  '**/.venv',
  '**/libs',
]
stubPath = 'typings'
pythonVersion = '3.8'

[tool.ruff]
preview = true
line-length = 120
target-version = 'py38'
exclude = [
  "*/libs/*",
  ".git",
  ".mypy_cache",
  ".venv",
  ".venv-*",
  "branch-*",
  "stubs",
  "tests/files",
  "typings",
  "vendor",
  "venv",
  "venv-*",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "W",
  "I",
  "UP",
  "FURB",
  "SIM",
]
ignore = ["E203", "SIM102", "SIM108"]
